--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Nital patel",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.17.2",
     "ejs": "^2.5.7",
     "express": "^4.15.4",
     "nodemon": "^1.11.0"
